<resources>

    <!-- App Data -->
    <string name="app_name">Newstard</string>

    <string name="app_code_url">https://github.com/sunitdeshpande/newstards</string>
    <!-- /App Data -->

    <!-- App Preference -->
    <string name="preference_app_activity_title">Settings</string>

    <string name="preference_app_filename" translatable="false">app_preference</string>

    <string name="preference_category_general">General</string>
    <string name="preference_category_about">About</string>

    <string name="preference_app_key_is_dark_theme" translatable="false">is_dark_theme</string>
    <string name="preference_app_title_is_dark_theme">Dark Theme</string>
    <string name="preference_app_summary_on_is_dark_theme">Disable dark theme for the app</string>
    <string name="preference_app_summary_off_is_dark_theme">Enable dark theme for the app</string>

    <string name="preference_app_key_last_active_service_id" translatable="false">last_active_service_id</string>

    <string name="preference_app_summary_about">A simple new aggregator.</string>

    <string name="preference_app_title_app_version">Application Version</string>
    
    <string name="preference_app_title_contribute">Contribute</string>
    <string name="preference_app_summary_contribute">This project is open source please feel free to contribute.</string>
    <!-- /App Preference -->
</resources>
