<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="@string/preference_app_filename">

    <PreferenceCategory
            android:title="@string/preference_category_general">

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="@string/preference_app_key_is_dark_theme"
                android:title="@string/preference_app_title_is_dark_theme"
                android:summaryOn="@string/preference_app_summary_on_is_dark_theme"
                android:summaryOff="@string/preference_app_summary_off_is_dark_theme"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preference_category_about">

        <Preference
            android:selectable="false"
            android:summary="@string/preference_app_summary_about"/>

        <Preference
            android:selectable="false"
            android:title="@string/preference_app_title_app_version"
            android:summary="@string/app_version"/>

        <Preference
            android:title="@string/preference_app_title_contribute"
            android:summary="@string/preference_app_summary_contribute">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_code_url"/>

        </Preference>

    </PreferenceCategory>
</PreferenceScreen>